testsuite/tests/properties/invalid_cast/cross_node.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[FooNode, NumberNode]

    fun bar_node_parent(): BarNode = node.parent.as[BarNode]
    @exported fun prop(): ListNode = node.bar_node_parent.as[ListNode]
}
